--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 	position: center;
 	margin: 0 10px 0 10px;
 	border-radius: 12px;
-	padding: 10px 10px 10px 0;
+	padding: 10px 0 10px 0;
 	background: white;
 	text-align: center;
 	color: black;
